ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/valid/04_records_access.lava
record Vector(float x, float y);
Vector v = new Vector(1, 2);
float len = v.x * v.x + v.y * v.y;
