ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/22_invalid_new_arity.lava
record Point(int x, int y);
Point p = new Point(1);
